# devsoc-finsentry

./: AGENTS.md  Makefile  README.md  docker-compose.yml  pyrightconfig.json  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements-finance.txt
backend/ai/audio/: Kings Road 2.m4a  README.md  __init__.py  chunk.py  dsp.py  ingest.py  pipeline.py  preprocess.py  schema.py  silence.py  stt.py
backend/ai/finance/: README.md  __init__.py  config.py  pipeline.py  schema.py
backend/ai/finance/dataset/: __init__.py  callcenter.py  format.py  preprocess.py  preprocess_callcenter.py  synthetic.py
backend/ai/finance/eval/: __init__.py  evaluate.py
backend/ai/finance/models/: __init__.py  classifier.py  extractor.py  risk.py
backend/ai/finance/rag/: __init__.py  build_index.py  embeddings.py  generator.py  retriever.py
backend/ai/finance/training/: __init__.py  dataset.py  train.py
backend/core/: config.py
backend/data/audio/: README.md
backend/data/finance/callcenter/: callcenter_instruction.jsonl  callcenter_rag_corpus.jsonl  callcenter_train.jsonl  combined_train.jsonl  eval_results.json
backend/data/new_calls/: finance_train.jsonl
backend/models/finance_v2/: README.md  adapter_config.json
backend/models/finance_v2/checkpoint-1/: scheduler.pt  trainer_state.json
backend/models/finance_v2/checkpoint-2/: trainer_state.json
backend/repositories/: audio_repository.py
backend/routers/: audio.py  finance.py  general.py
backend/schemas/: audio.py
backend/services/: audio_service.py
scripts/: dev.sh  (+8 more)
(+50 files in other folders)
